# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "build_info"
edition.workspace = true
rust-version.workspace = true

[dependencies]
inspect.workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["git", "gitcl"] }

[lints]
workspace = true
