# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "get_lower_vtl"
edition.workspace = true
rust-version.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
hcl.workspace = true

hvdef.workspace = true
inspect.workspace = true
memory_range.workspace = true
virt.workspace = true

anyhow.workspace = true

[lints]
workspace = true
