# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "host_fdt_parser"
edition = "2021"
rust-version.workspace = true

[features]
std = ["fdt/std", "dep:tracing", "memory_range/std"]
inspect = ["std", "dep:inspect", "memory_range/inspect"]

[dependencies]
hvdef.workspace = true
memory_range.workspace = true

fdt.workspace = true
inspect = { workspace = true, optional = true }

arrayvec.workspace = true
igvm_defs.workspace = true
tracing = { workspace = true, optional = true }

[lints]
workspace = true
