# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "host_fdt_parser"
edition.workspace = true
rust-version.workspace = true

[features]
tracing = ["dep:tracing"]
inspect = ["dep:inspect", "memory_range/inspect"]

[dependencies]
hvdef.workspace = true
memory_range.workspace = true

fdt.workspace = true
inspect = { workspace = true, optional = true }

arrayvec.workspace = true
igvm_defs.workspace = true
tracing = { workspace = true, optional = true }

[lints]
workspace = true
