# Copyright (C) Microsoft Corporation. All rights reserved.

[package]
name = "minimal_rt"
edition = "2021"

[dependencies]
hvdef.workspace = true

arrayvec.workspace = true
cfg-if.workspace = true
zerocopy.workspace = true

[build-dependencies]
minimal_rt_build.workspace = true

[lints]
workspace = true
