# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "minimal_rt"
edition.workspace = true
rust-version.workspace = true

[dependencies]
hvdef.workspace = true

arrayvec.workspace = true
cfg-if.workspace = true
zerocopy.workspace = true
[build-dependencies]
minimal_rt_build.workspace = true

[lints]
workspace = true
