# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_attestation_protocol"
edition.workspace = true
rust-version.workspace = true

[dependencies]
open_enum.workspace = true
guid.workspace = true
mesh.workspace = true
sev_guest_device.workspace = true
tdx_guest_device.workspace = true

base64.workspace = true
base64-serde.workspace = true
hex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
