# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "openhcl_dma_manager"
rust-version.workspace = true
edition.workspace = true

[dependencies]
hcl.workspace = true
hcl_mapper.workspace = true
lower_vtl_permissions_guard.workspace = true

hvdef.workspace = true
inspect.workspace = true
memory_range.workspace = true
mesh.workspace = true
page_pool_alloc.workspace = true
user_driver.workspace = true
virt.workspace = true
vmcore.workspace = true

anyhow.workspace = true

[lints]
workspace = true
